# Engine_Semester4

./: CMakeLists.txt  settings.cmake
data/: vs_standard.hlsl
includes/: Application.h  scenenode.h
includes/components/: Animation.h  Component.h  Material.h  Mesh.h  Transform.h
includes/engine/: Entity.h  GameInstance.h  Scene.h
includes/helper/: Clock.h  Matrix4x4.h  Quaternion.h  Singleton.h  Vector3.h
includes/rendering/: Renderer.h  Window.h
res/: ps_standard.hlsl  shaderCompiler.bat  structs.hlsl  vs_standard.hlsl
src/: Animation.cpp  Application.cpp  Clock.cpp  Component.cpp  Entity.cpp  GameInstance.cpp  Matrix4x4.cpp  Quaternion.cpp  Renderer.cpp  Scene.cpp  Transform.cpp  Vector3.cpp  Window.cpp  main.cpp
